traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Missing closing brace `}' assumed here
override def run() {
^Snake:1: error: expected start of definition
override def run() {
         ^Snake:38: error: expected class or object definition
def positionFinale():Boolean = {
^Snake:65: error: Missing closing brace `}' assumed here
def positionFinale():Boolean = {
^Snake:65: error: expected class or object definition
def positionFinale():Boolean = {
^